--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.30.0
+tenacity>=8.1.0,<9
 python-dotenv==1.1.1
-tensorflow==2.13.0
+tensorflow==2.12.0
 keras==2.13.1
 torch==2.8.0
 scikit-learn==1.7.2
@@ -37,33 +38,22 @@ MarkupSafe==3.0.2
 mpmath==1.3.0
 narwhals==2.5.0
 networkx==3.5
-numpy==1.26.4
 packaging==25.0
-pillow==11.3.0
 protobuf==6.32.1
 pyarrow==21.0.0
-python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
-regex==2025.9.18
-requests==2.32.5
 rpds-py==0.27.1
 safetensors==0.6.2
-scikit-learn==1.7.2
-scipy==1.16.2
 setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 sympy==1.14.0
-tenacity==9.1.2
 threadpoolctl==3.6.0
 toml==0.10.2
-torch==2.8.0
 tornado==6.5.2
-tqdm==4.67.1
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 watchdog==6.0.0
-
