--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ torch==2.8.0
 scikit-learn==1.7.2
 numpy==1.26.4
 scipy==1.16.2
-pandas==2.1.1
+pandas==2.0.3
 matplotlib==3.8.1
 seaborn==0.12.2
 opencv-python==4.8.1.78
@@ -57,7 +57,5 @@ urllib3==2.5.0
 watchdog==6.0.0
 docx2txt
 PyMuPDF
-
-
-
-
+sentence-transformers
+fuzzywuzzy
